# agentic-workspace

./: .gitignore  PRD.md  README.md  docker-compose.yml
backend/agent/: .env.example  Dockerfile  README.md  agent_logic.py  chart_tool.py  db_tools.py  list_models.py  list_models_rest.py  main.py  pyproject.toml  test_antv.py  toolbox_tools.yaml
docs/: .$agent_data_analyzer.drawio.bkp  agent_data_analyzer.drawio
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
